@@ -1,3 +1,8 @@
+2008-02-20  Brian Gough  <bjg@network-theory.co.uk>
+
+	* beta_inc.c (beta_inc_AXPY): add some handling for large
+	parameter cases
+
 2008-02-12  Brian Gough  <bjg@network-theory.co.uk>
 
 	* hypergeometric.c (gsl_cdf_hypergeometric_P): compute midpoint in
